- Modified discriminator element to use "null" or "not null" as the value.
- Modified Dialect to use Hibernate 2.1 methods.
- Added "unsaved-value" to version/timestamp as DateTime can't support null, use 1/1/0001 to align with .NET default value for DateTime
- Added SaveOrUpdateCopy which allows synchronisation for detached objects

Build 0.7.0.0
======================== 
- Renamed class NHibernate.NHibernate to NHibernate.NHibernateUtil.  This will break alot of code if you were using ISession.Find with parameters - migrate to IQuery instead.
- Fixed bug with DateTime type where any value less than 1/1/1753 was written to the database as null.  If you were relying on this then the Nullables library in NHibernateContrib is the way to code null values for DateTime properties.
- Added ISession.Get() as an alternative to ISession.Load() (Sergey Koshcheyev).
- Added IDisposable to EnumerableImpl, ISession, ITransaction, IBatcher, and IConnectionProvider.
- Added default value of hibernate.connection.driver_class to Dialects.
- Added default value of hibernate.prepare_sql="false" to MsSql2000Dialect.
- Added [ComVisible(false)] to NHibernate AssemblyInfo.
- Added OracleDataClientDriver for Oracle.DataAccess assembly (James Mills).
- Added IDriver and Dialect for SQLite (Ioan Bizau).
- Fixed messages in exceptions from GetGetter and GetSetter in BasicPropertyAccessor and NoSetterAccessor.
- Fixed problem of LazyInitializationException losing InnerException.
- Fixed problem of Collections not always getting cached.
- Fixed Id.TableGenerator so it works with Oracle.
- Fixed problem with SequenceHiLoGenerator and converting to Int64 (Yves Dierick). 
- Fixed problem of some NHibernate Exceptions not being serializable.
- Improved documentation in IQuery to explain how SetMaxResult is working.
- Improved messages in Exceptions thrown by ISetter.
- Improved messages in Exceptions for Persisters with problems parsing discriminator values.