@@ -10,6 +10,7 @@ namespace NHibernate.DomainModel
 		private long _id;
 		private int _count;
 		private Child _child;
+		private object _any;
 		private int _x;
 		
 		public long Id
@@ -28,6 +29,12 @@ namespace NHibernate.DomainModel
 		{
 			get { return _child; }
 			set { _child = value; }
+		}
+
+		public object Any
+		{
+			get { return _any; }
+			set { _any = value; }
 		}
 
 		public int X
